<resources>
    <string name="app_name">Calculator</string>
    <string name="standard">Standard</string>
    <string name="scientific">Scientific</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string name="dark_theme">Dark Theme</string>

    <!-- Buttons -->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>

    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>

    <string name="x2">x<sup><small>2</small></sup></string>
    <string name="ex">e<sup><small>x</small></sup></string>
    <string name="x10">10<sup><small>x</small></sup></string>
    <string name="x1"><sup><small>1</small></sup>/x</string>

    <string name="plus_minus">±</string>
    <string name="dot">.</string>

    <string name="clear">C</string>
    <string name="backspace">⌫</string>

    <string name="equals">=</string>

    <string name="error">ERROR</string>

    <string name="square_number">sqr(0)</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="log">log</string>
    <string name="in">in</string>
    <string name="bin">bin</string>
    <string name="dec">dec</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="_10_0">10^0</string>
    <string name="log10_0">log10(0)</string>
    <string name="sin_0">sin(0)</string>
    <string name="cos_0">cos(0)</string>
    <string name="tan_0">tan(0)</string>
    <string name="ln_0">ln(0)</string>
    <string name="navigation_drawer_head_image">Navigation Drawer Head Image</string>
</resources>