<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ScientificFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.1"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/battleship_grey"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat"
            android:letterSpacing="0.1"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="viewEnd"
            android:textColor="?attr/displayTextColorTwo"
            android:textSize="60sp" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/x1Button"
                style="@style/ScientificButtonTheme"
                android:letterSpacing="0.2"
                android:text="@string/x1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/x10Button"
                style="@style/ScientificButtonTheme"
                android:letterSpacing="0.2"
                android:text="@string/x10" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sinButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/sin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cosButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/cos" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tanButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/tan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/exButton4"
                style="@style/ScientificButtonTheme"
                android:letterSpacing="0.2"
                android:text="@string/ex" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backspaceButton"
                style="@style/ScientificButtonTheme"
                android:letterSpacing="0.2"
                android:text="@string/x2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/clearButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/clear" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/x2Button"
                style="@style/ScientificButtonTheme"
                android:text="@string/backspace" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divisionButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/division" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log10Button"
                style="@style/ScientificButtonTheme"
                android:text="@string/log" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_seven"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_eight" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_nine" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiplicationButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/lnButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/in" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_four" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_five" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_six" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtractionButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/subtraction" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/binButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/bin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_one" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_two" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_three" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/additionButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/addition" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/dec" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plusminusButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/plus_minus" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button0"
                style="@style/ScientificButtonTheme"
                android:text="@string/number_zero" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dotButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/dot" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equalsButton"
                style="@style/ScientificButtonTheme"
                android:text="@string/equals" />
        </LinearLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>